<?xml version="1.1"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_grpc_server</name>
  <version>0.0.0</version>
  <description>ROS 2 gRPC Server</description>
  <maintainer email="tasada381@gmail.com">Takumi Asada</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>libgrpc</depend>
  <depend>protobuf-compiler-grpc</depend>
  <depend>protobuf-dev</depend>

  <exec_depend>python3-grpcio</exec_depend>
  <exec_depend>python3-grpc-tools</exec_depend>
  <exec_depend>python3-protobuf</exec_depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
